@@ -1,6 +1,26 @@
 /*
  * $XFree86: xc/lib/Xfixes/Cursor.c,v 1.1 2002/11/30 06:21:44 keithp Exp $
  *
+ * Copyright © 2006 Sun Microsystems
+ *
+ * Permission to use, copy, modify, distribute, and sell this software and its
+ * documentation for any purpose is hereby granted without fee, provided that
+ * the above copyright notice appear in all copies and that both that
+ * copyright notice and this permission notice appear in supporting
+ * documentation, and that the name of Sun Microsystems not be used in
+ * advertising or publicity pertaining to distribution of the software without
+ * specific, written prior permission.  Sun Microsystems makes no
+ * representations about the suitability of this software for any purpose.  It
+ * is provided "as is" without express or implied warranty.
+ *
+ * SUN MICROSYSTEMS DISCLAIMS ALL WARRANTIES WITH REGARD TO THIS SOFTWARE,
+ * INCLUDING ALL IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS, IN NO
+ * EVENT SHALL SUN MICROSYSTEMS BE LIABLE FOR ANY SPECIAL, INDIRECT OR
+ * CONSEQUENTIAL DAMAGES OR ANY DAMAGES WHATSOEVER RESULTING FROM LOSS OF USE,
+ * DATA OR PROFITS, WHETHER IN AN ACTION OF CONTRACT, NEGLIGENCE OR OTHER
+ * TORTIOUS ACTION, ARISING OUT OF OR IN CONNECTION WITH THE USE OR
+ * PERFORMANCE OF THIS SOFTWARE.
+ *
  * Copyright © 2002 Keith Packard, member of The XFree86 Project, Inc.
  *
  * Permission to use, copy, modify, distribute, and sell this software and its
@@ -217,4 +237,40 @@ XFixesChangeCursorByName (Display *dpy, Cursor source, const char *name)
     Data (dpy, name, nbytes);
     UnlockDisplay(dpy);
     SyncHandle();
+}
+
+void
+XFixesHideCursor (Display *dpy, Window win)
+{
+    XFixesExtDisplayInfo	*info = XFixesFindDisplay (dpy);
+    xXFixesHideCursorReq	*req;
+
+    XFixesSimpleCheckExtension (dpy, info);
+    if (info->major_version < 4)
+	return;
+    LockDisplay (dpy);
+    GetReq (XFixesHideCursor, req);
+    req->reqType = info->codes->major_opcode;
+    req->xfixesReqType = X_XFixesHideCursor;
+    req->window = win;
+    UnlockDisplay (dpy);
+    SyncHandle ();
+}
+
+void
+XFixesShowCursor (Display *dpy, Window win)
+{
+    XFixesExtDisplayInfo	*info = XFixesFindDisplay (dpy);
+    xXFixesShowCursorReq	*req;
+
+    XFixesSimpleCheckExtension (dpy, info);
+    if (info->major_version < 4)
+	return;
+    LockDisplay (dpy);
+    GetReq (XFixesShowCursor, req);
+    req->reqType = info->codes->major_opcode;
+    req->xfixesReqType = X_XFixesShowCursor;
+    req->window = win;
+    UnlockDisplay (dpy);
+    SyncHandle ();
 }
