@@ -1,3 +1,11 @@
+2006-3-13   Deron Johnson  <deron.johnson@sun.com>
+
+	* configure.ac
+	* include/X11/extensions/Xfixes.h
+	* src/Cursor.c
+	Composite Version 0.3: CompositeGetOverlayWindow, CompositeReleaseOverlayWindow
+	Xfixes Version 4.0: XFixesHideCursor, XFixesShowCursor
+
 2005-12-14  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
